@@ -1,3 +1,11 @@
+2002-12-12  gettextize  <bug-gnu-utils@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.10.40.
+
+2002-12-12  gettextize  <bug-gnu-utils@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.10.40.
+
 2002-11-18 Naba Kumar <naba@gnome.org>
 
 	* POTFILES.in: Updated
